welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: not found: value occurences
		if((occurences(nums,k))==3){
                    ^noTriples:2: error: type mismatch;
 found   : Unit
 required: Boolean
	for (k<-minValue(nums) to maxValue(nums)){
              ^